--- a/group_project.ipynb
+++ b/group_project.ipynb
@@ -2,19 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "daily_returns = sc.textFile(\"s3n://msan-usf-gproject/daily_returns.csv\")\n",
-    "first = daily_returns.first()"
+    "header = daily_returns.first()\n",
+    "\n",
+    "rdd = daily_returns.filter(lambda x: x != header)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -33,12 +35,12 @@
        "  0.113292053342,\n",
        "  1.62123823166,\n",
        "  -0.179403930902,\n",
-       "  u'',\n",
+       "  0.0,\n",
        "  -0.0721078515053,\n",
        "  0.249186635017,\n",
        "  0.0244014300406,\n",
        "  -0.127942487597,\n",
-       "  u'',\n",
+       "  0.0,\n",
        "  1.41274225712,\n",
        "  -0.0295753479004,\n",
        "  1.26524603367,\n",
@@ -69,7 +71,7 @@
        "  -0.194317787886,\n",
        "  0.264373421669,\n",
        "  0.01876296103,\n",
-       "  u'',\n",
+       "  0.0,\n",
        "  -0.145278140903,\n",
        "  -0.108546897769,\n",
        "  0.148189216852,\n",
@@ -90,52 +92,52 @@
        "  -0.131929144263,\n",
        "  -0.145984902978,\n",
        "  -0.155988737941,\n",
-       "  u'',\n",
+       "  0.0,\n",
        "  0.0376801341772,\n",
-       "  u'',\n",
-       "  u'',\n",
+       "  0.0,\n",
+       "  0.0,\n",
        "  -2.0,\n",
-       "  u'',\n",
-       "  u'',\n",
+       "  0.0,\n",
+       "  0.0,\n",
        "  -2.0,\n",
        "  -0.273957371712,\n",
-       "  u'',\n",
+       "  0.0,\n",
        "  -2.0,\n",
        "  -2.0,\n",
-       "  u'',\n",
+       "  0.0,\n",
        "  0.00165155075956,\n",
        "  -2.0,\n",
-       "  u'',\n",
+       "  0.0,\n",
        "  -2.0,\n",
-       "  u'',\n",
+       "  0.0,\n",
        "  0.652980566025,\n",
        "  0.0,\n",
        "  -0.142452836037,\n",
        "  0.0,\n",
-       "  u'',\n",
-       "  u'',\n",
+       "  0.0,\n",
+       "  0.0,\n",
        "  1.42746901512,\n",
-       "  u'',\n",
+       "  0.0,\n",
        "  -2.0,\n",
        "  0.0,\n",
-       "  u'',\n",
-       "  u'',\n",
-       "  u'',\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.0,\n",
        "  0.0,\n",
        "  0.937880218029,\n",
        "  0.775208115578,\n",
-       "  u'',\n",
-       "  u'',\n",
-       "  u'',\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.0,\n",
        "  -0.414775848389,\n",
-       "  u'',\n",
-       "  u'',\n",
+       "  0.0,\n",
+       "  0.0,\n",
        "  -2.0,\n",
-       "  u'',\n",
+       "  0.0,\n",
        "  -0.0117534492165)]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,7 +147,7 @@
     "    try:\n",
     "        return float(x)\n",
     "    except ValueError:\n",
-    "        return x\n",
+    "        return 0.0\n",
     "    \n",
     "rddSplit = rdd.map(lambda x: x.split(','))\n",
     "rddDoubles = rddSplit.map(lambda x: tuple([toDouble(val) for val in x]))\n",
@@ -154,9 +156,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -193,8 +196,124 @@
     }
    ],
    "source": [
-    "df = sqlContext.createDataFrame(rddDoubles,  first.split(','))\n",
+    "df = sqlContext.createDataFrame(rddDoubles,  header.split(','))\n",
     "df.select('id', 'timestamp').show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "df_train = df.where('timestamp < 906')\n",
+    "df_test = df.where('timestamp >= 906')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from pyspark.ml.feature import VectorAssembler\n",
+    "va_train = VectorAssembler(outputCol=\"features\", inputCols=df_train.columns[2:-1])\n",
+    "va_test = VectorAssembler(outputCol=\"features\", inputCols=df_test.columns[2:-1])\n",
+    "train = va_train.transform(df_train).select(\"features\", \"y\").cache()\n",
+    "test = va_test.transform(df_test).select(\"features\", \"y\").cache()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "train = train.withColumnRenamed(existing='y', new='label')\n",
+    "test = test.withColumnRenamed(existing='y', new='label')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "from pyspark.ml.regression import RandomForestRegressor\n",
+    "rf = RandomForestRegressor(numTrees=100, maxDepth=5)\n",
+    "rfmodel = rf.fit(train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "rfpredcitions = rfmodel.transform(test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "pred = rfpredcitions.select(\"prediction\").rdd.map(lambda r: r[0]).collect()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "labels = rfpredcitions.select(\"label\").rdd.map(lambda r: r[0]).collect()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0254168611149\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "pred = np.array(pred)\n",
+    "labels = np.array(labels)\n",
+    "\n",
+    "def rvalue(pred, y):\n",
+    "    mu = np.mean(y)\n",
+    "    rsquare = 1 - sum( (y - pred)**2 ) / sum ( (y - mu )**2)\n",
+    "    r = np.sign(rsquare) * np.sqrt( abs(rsquare) )\n",
+    "    \n",
+    "    return r\n",
+    "\n",
+    "print rvalue(pred, labels)"
    ]
   }
  ],
