--- a/group_project.ipynb
+++ b/group_project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -16,214 +16,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(10.0,\n",
-       "  0.0,\n",
-       "  0.370326220989,\n",
-       "  -0.00631639920175,\n",
-       "  0.222831085324,\n",
-       "  -0.213030129671,\n",
-       "  0.729276776314,\n",
-       "  -0.335633248091,\n",
-       "  0.113292053342,\n",
-       "  1.62123823166,\n",
-       "  -0.179403930902,\n",
-       "  0.0,\n",
-       "  -0.0721078515053,\n",
-       "  0.249186635017,\n",
-       "  0.0244014300406,\n",
-       "  -0.127942487597,\n",
-       "  0.0,\n",
-       "  1.41274225712,\n",
-       "  -0.0295753479004,\n",
-       "  1.26524603367,\n",
-       "  -0.0557470582426,\n",
-       "  1.59225594997,\n",
-       "  -0.285275280476,\n",
-       "  -0.212887898088,\n",
-       "  0.40418022871,\n",
-       "  0.116902828217,\n",
-       "  0.197589740157,\n",
-       "  -0.197454556823,\n",
-       "  -0.195023342967,\n",
-       "  -0.0598861537874,\n",
-       "  -0.0211989730597,\n",
-       "  -0.0135547351092,\n",
-       "  -0.236370578408,\n",
-       "  -0.253357321024,\n",
-       "  0.575561583042,\n",
-       "  0.283947110176,\n",
-       "  -0.00620764028281,\n",
-       "  0.616350948811,\n",
-       "  -0.0345781445503,\n",
-       "  0.732652306557,\n",
-       "  -0.00243225856684,\n",
-       "  -0.0925076529384,\n",
-       "  -0.0721848458052,\n",
-       "  0.447295695543,\n",
-       "  -0.194317787886,\n",
-       "  0.264373421669,\n",
-       "  0.01876296103,\n",
-       "  0.0,\n",
-       "  -0.145278140903,\n",
-       "  -0.108546897769,\n",
-       "  0.148189216852,\n",
-       "  -0.226942017674,\n",
-       "  0.262863576412,\n",
-       "  -0.252933114767,\n",
-       "  -0.113264843822,\n",
-       "  0.180559366941,\n",
-       "  -0.0338116437197,\n",
-       "  0.0429507419467,\n",
-       "  -0.0680313110352,\n",
-       "  0.208402082324,\n",
-       "  -0.0827429741621,\n",
-       "  1.06105899811,\n",
-       "  1.12080144882,\n",
-       "  -0.228200241923,\n",
-       "  -0.119987480342,\n",
-       "  -0.131929144263,\n",
-       "  -0.145984902978,\n",
-       "  -0.155988737941,\n",
-       "  0.0,\n",
-       "  0.0376801341772,\n",
-       "  0.0,\n",
-       "  0.0,\n",
-       "  -2.0,\n",
-       "  0.0,\n",
-       "  0.0,\n",
-       "  -2.0,\n",
-       "  -0.273957371712,\n",
-       "  0.0,\n",
-       "  -2.0,\n",
-       "  -2.0,\n",
-       "  0.0,\n",
-       "  0.00165155075956,\n",
-       "  -2.0,\n",
-       "  0.0,\n",
-       "  -2.0,\n",
-       "  0.0,\n",
-       "  0.652980566025,\n",
-       "  0.0,\n",
-       "  -0.142452836037,\n",
-       "  0.0,\n",
-       "  0.0,\n",
-       "  0.0,\n",
-       "  1.42746901512,\n",
-       "  0.0,\n",
-       "  -2.0,\n",
-       "  0.0,\n",
-       "  0.0,\n",
-       "  0.0,\n",
-       "  0.0,\n",
-       "  0.0,\n",
-       "  0.937880218029,\n",
-       "  0.775208115578,\n",
-       "  0.0,\n",
-       "  0.0,\n",
-       "  0.0,\n",
-       "  -0.414775848389,\n",
-       "  0.0,\n",
-       "  0.0,\n",
-       "  -2.0,\n",
-       "  0.0,\n",
-       "  -0.0117534492165)]"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def toDouble(x):\n",
     "    try:\n",
     "        return float(x)\n",
     "    except ValueError:\n",
-    "        return 0.0\n",
+    "        return -9999.0\n",
+    "\n",
+    "def clipper(val):\n",
+    "    if val < -0.075:\n",
+    "        return -0.075\n",
+    "    elif val > 0.075:\n",
+    "        return 0.075\n",
+    "    else:\n",
+    "        return val\n",
     "    \n",
+    "\n",
     "rddSplit = rdd.map(lambda x: x.split(','))\n",
     "rddDoubles = rddSplit.map(lambda x: tuple([toDouble(val) for val in x]))\n",
-    "rddDoubles.take(1)"
+    "df = sqlContext.createDataFrame(rddDoubles,  header.split(','))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {
-    "collapsed": false,
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+----+---------+\n",
-      "|  id|timestamp|\n",
-      "+----+---------+\n",
-      "|10.0|      0.0|\n",
-      "|11.0|      0.0|\n",
-      "|12.0|      0.0|\n",
-      "|25.0|      0.0|\n",
-      "|26.0|      0.0|\n",
-      "|27.0|      0.0|\n",
-      "|31.0|      0.0|\n",
-      "|38.0|      0.0|\n",
-      "|39.0|      0.0|\n",
-      "|40.0|      0.0|\n",
-      "|41.0|      0.0|\n",
-      "|43.0|      0.0|\n",
-      "|44.0|      0.0|\n",
-      "|49.0|      0.0|\n",
-      "|54.0|      0.0|\n",
-      "|59.0|      0.0|\n",
-      "|60.0|      0.0|\n",
-      "|62.0|      0.0|\n",
-      "|63.0|      0.0|\n",
-      "|68.0|      0.0|\n",
-      "+----+---------+\n",
-      "only showing top 20 rows\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "df = sqlContext.createDataFrame(rddDoubles,  header.split(','))\n",
-    "df.select('id', 'timestamp').show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "df_train = df.where('timestamp < 906')\n",
-    "df_test = df.where('timestamp >= 906')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -618,7 +439,7 @@
        "[111 rows x 2 columns]"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -630,177 +451,131 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "from pyspark.sql.functions import * \n",
+    "\n",
     "for col in df.columns[2:-1]:\n",
     "    median = float(global_medians.loc[global_medians.feature==col, 'median'])\n",
-    "    df = df.replace(subset=col, to_replace=0.0, value=median)"
+    "    df = df.replace(subset=col, to_replace=0.0, value=median)\n",
+    "    \n",
+    "    \n",
+    "df_train = df.where('timestamp < 906')\n",
+    "df_test = df.where('timestamp >= 906')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 27,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
+    "################# RandomForestation ################################\n",
+    "\n",
+    "##### Assemble features ###########\n",
     "from pyspark.ml.feature import VectorAssembler\n",
     "va_train = VectorAssembler(outputCol=\"features\", inputCols=df_train.columns[2:-1])\n",
     "va_test = VectorAssembler(outputCol=\"features\", inputCols=df_test.columns[2:-1])\n",
     "train = va_train.transform(df_train).select(\"features\", \"y\").cache()\n",
-    "test = va_test.transform(df_test).select(\"features\", \"y\").cache()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 64,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
+    "test = va_test.transform(df_test).select(\"features\", \"y\").cache()\n",
+    "\n",
     "train = train.withColumnRenamed(existing='y', new='label')\n",
-    "test = test.withColumnRenamed(existing='y', new='label')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 65,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
+    "test = test.withColumnRenamed(existing='y', new='label')\n",
+    "\n",
+    "##### train randomforestation ###########\n",
     "from pyspark.ml.regression import RandomForestRegressor\n",
     "rf = RandomForestRegressor(numTrees=200, maxDepth=5)\n",
-    "rfmodel = rf.fit(train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 66,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "rfpredcitions = rfmodel.transform(test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 67,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "def clipper(val):\n",
-    "    if val < -0.075:\n",
-    "        return -0.075\n",
-    "    elif val > 0.075:\n",
-    "        return 0.075\n",
-    "    else:\n",
-    "        return val"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 84,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
+    "rfmodel = rf.fit(train)\n",
+    "\n",
+    "##### predict\n",
+    "rfpredcitions = rfmodel.transform(test)\n",
     "predictions = rfpredcitions.select(\"prediction\").rdd.map(lambda r:  clipper(r[0]) ).collect()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 28,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
+    "#### get actual returns\n",
     "labels = rfpredcitions.select(\"label\").rdd.map(lambda r: r[0]).collect()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 37,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "################### Linear Reregression ################################\n",
+    "\n",
+    "df_reg_train = df_train.select('id', 'timestamp', 'technical_20', 'technical_30', 'y')\n",
+    "df_reg_test = df_test.select('id', 'timestamp', 'technical_20', 'technical_30', 'y')\n",
+    "\n",
+    "\n",
+    "##### Assemble features #############\n",
+    "from pyspark.ml.feature import VectorAssembler\n",
+    "va_train = VectorAssembler(outputCol=\"features\", inputCols=df_reg_train.columns[2:-1])\n",
+    "va_test = VectorAssembler(outputCol=\"features\", inputCols=df_reg_test.columns[2:-1])\n",
+    "train = va_train.transform(df_reg_train).select(\"features\", \"y\").cache()\n",
+    "test = va_test.transform(df_reg_test).select(\"features\", \"y\").cache()\n",
+    "\n",
+    "train = train.withColumnRenamed(existing='y', new='label')\n",
+    "test = test.withColumnRenamed(existing='y', new='label')\n",
+    "\n",
+    "##### train linear regression model\n",
+    "from pyspark.ml.regression import LinearRegression\n",
+    "reg = LinearRegression()\n",
+    "reg_estimate = reg.fit(train)\n",
+    "\n",
+    "##### predict\n",
+    "reg_predictions = reg_estimate.transform(test)\n",
+    "reg_pred = reg_predictions.select('prediction').rdd.map(lambda r: clipper(r[0])).collect()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'numpy.ndarray' object has no attribute '_get_object_id'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-87-c4f1c47f181c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     11\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mr\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m \u001b[0;32mprint\u001b[0m \u001b[0mrvalue\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpredictions\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabels\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-87-c4f1c47f181c>\u001b[0m in \u001b[0;36mrvalue\u001b[0;34m(pred, y)\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mrvalue\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpred\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[0mmu\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmean\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m     \u001b[0mrsquare\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m \u001b[0;34m(\u001b[0m \u001b[0my\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mpred\u001b[0m \u001b[0;34m)\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0;36m2\u001b[0m \u001b[0;34m)\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0my\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mmu\u001b[0m \u001b[0;34m)\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m     \u001b[0mr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msign\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrsquare\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msqrt\u001b[0m\u001b[0;34m(\u001b[0m \u001b[0mabs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrsquare\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/usr/lib/spark/python/pyspark/sql/functions.py\u001b[0m in \u001b[0;36m_\u001b[0;34m(col)\u001b[0m\n\u001b[1;32m     37\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m_\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcol\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     38\u001b[0m         \u001b[0msc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mSparkContext\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_active_spark_context\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 39\u001b[0;31m         \u001b[0mjc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgetattr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_jvm\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfunctions\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcol\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_jc\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcol\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mColumn\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32melse\u001b[0m \u001b[0mcol\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     40\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mColumn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mjc\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     41\u001b[0m     \u001b[0m_\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__name__\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/usr/lib/spark/python/lib/py4j-0.10.3-src.zip/py4j/java_gateway.py\u001b[0m in \u001b[0;36m__call__\u001b[0;34m(self, *args)\u001b[0m\n\u001b[1;32m   1122\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1123\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__call__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1124\u001b[0;31m         \u001b[0margs_command\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtemp_args\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_build_args\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1125\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1126\u001b[0m         \u001b[0mcommand\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mproto\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mCALL_COMMAND_NAME\u001b[0m \u001b[0;34m+\u001b[0m\u001b[0;31m\\\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/usr/lib/spark/python/lib/py4j-0.10.3-src.zip/py4j/java_gateway.py\u001b[0m in \u001b[0;36m_build_args\u001b[0;34m(self, *args)\u001b[0m\n\u001b[1;32m   1092\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1093\u001b[0m         args_command = \"\".join(\n\u001b[0;32m-> 1094\u001b[0;31m             [get_command_part(arg, self.pool) for arg in new_args])\n\u001b[0m\u001b[1;32m   1095\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1096\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0margs_command\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtemp_args\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/usr/lib/spark/python/lib/py4j-0.10.3-src.zip/py4j/protocol.py\u001b[0m in \u001b[0;36mget_command_part\u001b[0;34m(parameter, python_proxy_pool)\u001b[0m\n\u001b[1;32m    287\u001b[0m             \u001b[0mcommand_part\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;34m\";\"\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0minterface\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    288\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 289\u001b[0;31m         \u001b[0mcommand_part\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mREFERENCE_TYPE\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mparameter\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_get_object_id\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    290\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    291\u001b[0m     \u001b[0mcommand_part\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;34m\"\\n\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'numpy.ndarray' object has no attribute '_get_object_id'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "R-value: 0.0268568840424\n"
      ]
     }
    ],
    "source": [
     "import numpy as np\n",
     "\n",
-    "predictions = np.array(predictions)\n",
+    "\n",
+    "predictions_f = ( np.array(predictions) * .85 + np.array(reg_pred) *0.15)\n",
     "labels = np.array(labels)\n",
     "\n",
     "def rvalue(pred, y):\n",
     "    mu = np.mean(y)\n",
-    "    rsquare = 1 - sum( ( y - pred )**2 ) / sum( (y - mu )**2)\n",
-    "    r = np.sign(rsquare) * np.sqrt( abs(rsquare) )\n",
+    "    \n",
+    "    rsquare = 1 - np.sum( ( y - pred )**2 ) / np.sum( (y - mu )**2)\n",
+    "    r = np.sign(rsquare) * np.sqrt( np.abs(rsquare) )\n",
     "    \n",
     "    return r\n",
     "\n",
-    "print rvalue(predictions, labels)"
+    "print \"R-value:\",rvalue(predictions_f, labels)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 81,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 0.0020868 ,  0.00787344,  0.00623005, ..., -0.00667257,\n",
-       "       -0.00058802,  0.00370951])"
-      ]
-     },
-     "execution_count": 81,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
   }
  ],
  "metadata": {
